--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/validator": "^5.0.6",
+    "@adonisjs/websocket": "^1.0.12",
     "mysql": "^2.18.1"
   },
   "autoload": {
