--- a/backend/package.json
+++ b/backend/package.json
@@ -25,9 +25,8 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/persona": "^1.0.5",
-    "@adonisjs/validator": "^5.0.6",
-    "@adonisjs/websocket": "^1.0.12",
-    "mysql": "^2.18.1"
+    "@adonisjs/validator": "^5.1.0",
+    "@adonisjs/websocket": "^1.0.12"
   },
   "autoload": {
     "App": "./app"
