🔧 ws framework added

--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "ws": "^7.5.0"
   }
 }
